hphp/test/zend/good/ext/exif/tests/exif011.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded('exif')) print 'skip exif extension not available';
}
