hphp/test/zend/bad/ext/sockets/tests/socket_import_stream-5.php.skipif
<?php
if (!extension_loaded('sockets')) {
	die('SKIP sockets extension not available.');
}
if (!function_exists('leak_variable'))
	die('SKIP only for debug builds');